# dvrk_multimodal_data_collection

./: .gitignore  .gitmodules  HOW_to_RUN_Process.md  HOW_to_RUN_pack.md  HOW_to_RUN_unpack.md  README.md  pyproject.toml
FoundationStereo/: environment.yml
Kinematic/: kinematic_heatmap.py
Optical/: opticalFlowFilter.py
analysis_results/: README.md  README_analysis.md  modified_histogram_analysis.py  requirements.txt  run_analysis.py  test.py  timestamp_offset_analysis.py
config/: ECM-438610-Custom.json  config.yaml  config_annotation.yaml  config_annotation_suture.yaml  config_convert_old_data.yaml  config_convert_openh.yaml  config_data_org.yaml  config_data_remap.yaml  config_data_trim.yaml  config_de_jack.yaml  config_de_jack_ubc.yaml  config_extract_online_raw_data.yaml  config_i2v_jack.yaml  config_kp.yaml  config_kp_chang.yaml  config_kp_jack.yaml  config_kp_jack_campus.yaml  config_kp_jack_ubc.yaml  config_label_convert_from_old.yaml  config_label_org.yaml  config_of_jack.yaml  config_of_raft_jack.yaml  config_of_raft_jack_ubc.yaml  config_rr.yaml  config_rr_jack.yaml  config_rr_jack_campus.yaml  config_rr_jack_ubc.yaml  config_rr_wu.yaml  config_sync_reorg.yaml  config_test_sync.yaml  config_v2i_jack.yaml  console-SUJ-ECM-MTML-PSM2-MTMR-PSM1-Teleop-Custom.json  run_all_stages.yaml
docs/: HOW_to_RUN.md  HOW_to_RUN_Process.md  HOW_to_RUN_pack.md  HOW_to_RUN_unpack.md
dvrk_config/: console-SUJ-ECM-PSM1-PSM2-Custom.json
env_setup/: INSTALL.md  create_env.sh
launch/: gscam_v4l.launch  gscam_v4l_mjpg.launch
media/: gen_file_tree.bash
(+213 files in other folders)
